--- a/html/sales.html
+++ b/html/sales.html
@@ -8,11 +8,12 @@
   <link rel="stylesheet" type="text/css" media="screen" href="../css/sales.css" />
 
 </head>
-    <h1>my Cookies Store</h1>
-    <h1>My Cookies Store</h1>
+    <h1>Cookies Store</h1>
+    
 <body id="myBody">
 <p id="myBody1"> </p> 
 <p id="myBody2"> </p>
+
 
 </body>
 <script src="../js/app.js"></script>
