--- a/html/sales.html
+++ b/html/sales.html
@@ -3,19 +3,18 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Cookies</title>
+  <title>My cookies-store</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="../css/sales.css" />
 
 </head>
-    <h1>Cookies Store</h1>
-    
+<body>
+cookies<h2> Cookies Sold perday</h2>
 <body id="myBody">
-<p id="myBody1"> </p> 
-<p id="myBody2"> </p>
+<table id="Cookies-Table" border="2">
 
+</table>
 
 </body>
 <script src="../js/app.js"></script>
-
 </html>
