--- a/html/sales.html
+++ b/html/sales.html
@@ -3,18 +3,31 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My cookies-store</title>
+  <title>Page Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="../css/sales.css" />
-
+  
 </head>
-<body>
-cookies<h2> Cookies Sold perday</h2>
-<body id="myBody">
-<table id="Cookies-Table" border="2">
 
-</table>
-
+<body id='my Body'>
+  <h1>Cookies Store</h1>
+<table id ='Cookies-Table' border="2"></table>
+<fieldset >
+    <form id='f_form'>
+     <label>Name of Store</label>
+    <input required Name='nameOfStore'/>
+    <label>MinNum</label>
+    <input name='min' minNum=0 type="number"/>
+    <label>MaxNum</label>
+    <input name='max' minNum=0  type='number'/>
+    customer number
+    <input name='cusNum'   type='number'/>
+    <button type="Submit" name>submit</button>
+    
+      </form>
+  </fieldset>
+  </header>
 </body>
+
 <script src="../js/app.js"></script>
 </html>
